--- a/60_multi_jobs_bosh_micro_build/pipeline-build-save.yml
+++ b/60_multi_jobs_bosh_micro_build/pipeline-build-save.yml
@@ -7,6 +7,8 @@ jobs:
   - aggregate:
     - get: bosh-init
       resource: git-bosh-init
+    - get: tutorial
+      resource: git-tutorial
   - task: bosh-init-cli-build
     config:
       platform: linux
@@ -16,11 +18,14 @@ jobs:
       inputs:
         - name: bosh-init
           path: gopath/src/github.com/cloudfoundry/bosh-init
+      outputs:
+        - name: built-executable
+          path: build
       run:
-        path: gopath/src/github.com/cloudfoundry/bosh-init/bin/build
+        path: tutorial/60_multi_jobs_bosh_micro_build/task-bosh-init-cli-build.sh
   - put: s3-bosh-init
     params:
-      from: bosh-init-cli-build/gopath/src/github.com/cloudfoundry/bosh-init/out/bosh-init
+      file: build/bosh-init
 
 resources:
 - name: git-bosh-init
@@ -28,6 +33,11 @@ resources:
   source:
     uri: https://github.com/cloudfoundry/bosh-init.git
     branch: master
+- name: git-tutorial
+  type: git
+  source:
+    uri: https://github.com/starkandwayne/concourse-tutorial.git
+    branch: fix-lesson-60
 - name: s3-bosh-init
   type: s3
   source:
